--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   http: ^1.2.1
-
+  image_picker: ^1.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
