--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -11,10 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.8
   http: ^1.2.1
   image_picker: ^1.1.1
+  file_picker: ^8.2.3
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
