--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   image_picker: ^1.1.1
   file_picker: ^8.2.3
   path: ^1.9.0
-
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
