--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   file_picker: ^8.2.3
   path: ^1.9.0
   shared_preferences: ^2.1.1
-
+  url_launcher: ^6.1.12
 dev_dependencies:
   flutter_test:
     sdk: flutter
