--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.1
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -18,6 +18,10 @@ dependencies:
   path: ^1.9.0
   shared_preferences: ^2.1.1
   url_launcher: ^6.1.12
+  fl_chart: ^1.0.0
+  font_awesome_flutter: ^10.4.0
+  intl: ^0.18.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
