--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   fl_chart: ^1.0.0
   font_awesome_flutter: ^10.4.0
   intl: ^0.18.1
+  
+  path_provider: ^2.0.15
+  syncfusion_flutter_charts: ^23.1.44
+  csv: ^5.0.0
 
 dev_dependencies:
   flutter_test:
