--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   path_provider: ^2.0.15
   syncfusion_flutter_charts: ^23.1.44
   csv: ^5.0.0
+  permission_handler: ^11.0.1  # Check for latest version
+  share_plus: ^7.0.1      
+      # Check for latest version
 
 dev_dependencies:
   flutter_test:
