--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -26,6 +26,11 @@ dependencies:
   csv: ^5.0.0
   permission_handler: ^11.0.1
   share_plus: ^7.2.2
+   # Add these for better network image handling
+  cached_network_image: ^3.3.0
+  connectivity_plus: ^5.0.1
+  open_file: ^3.3.3
+
 
 
 dev_dependencies:
